@@ -9,6 +9,8 @@ Description: The name 'merkhet' is an ancient word for a kind of timekeeping
 License: BSD 2-clause License + file LICENSE
 Depends:
     R (>= 3.0.0)
+Imports:
+    R6 (>= 2.4.1)
 ByteCompile: yes
 Authors@R: person("Drew", "Schmidt", role=c("aut", "cre"), email="wrathematics@gmail.com")
 Maintainer: Drew Schmidt <wrathematics@gmail.com>
