@@ -5,9 +5,11 @@ export(Sys.runtime)
 export(Sys.systime)
 export(Sys.uptime)
 export(Sys.usrtime)
+export(bench)
 export(post.system.time)
 export(readable.time)
 export(wc.time)
+importFrom(R6,R6Class)
 useDynLib(merkhet,R_merkhet_process_runtime)
 useDynLib(merkhet,R_merkhet_process_systime)
 useDynLib(merkhet,R_merkhet_process_usrtime)
