@@ -2,6 +2,7 @@ Release 0.3-0:
   * Cleaned up some internals.
   * Fix installation documentation issue.
   * No longer round in Sys.usrtime() and Sys.systime().
+  * Added benchmarker bench().
 
 Release 0.2-0:
   * Switched to a header-only RNACI.
